[FE] fix: 루틴 목록 min-height, gap, padding 설정

--- a/FE/src/styles/mypage/MyPage.module.scss
+++ b/FE/src/styles/mypage/MyPage.module.scss
@@ -385,9 +385,10 @@ $border: 1px;
   &__item {
     display: grid;
     grid-template-columns: 9fr 1fr;
+    gap: 1em;
     align-items: center;
-    height: 5em;
-    padding: 0 1em;
+    min-height: 5.5em;
+    padding: 0.5em 1em;
     box-sizing: border-box;
     border-bottom: 0.5px solid $color-gray-2;
     cursor: pointer;
@@ -413,7 +414,6 @@ $border: 1px;
     display: flex;
     flex-direction: column;
     gap: 0.3em;
-    width: 100%;
 
     > div > span {
       color: $color-gray-4;
